# GameOfLife

./: README.md  pyproject.toml
gameoflife/: app.py  config.py
